refactored tests authorization logic, user roles logic; added parametrization to tests; divided tests into smoke, negative; swagger CRUD for categories; bug fix of conflict sign up/category create duplication in email/name; escaping regex in category search; tests for category editing permissions
