# routes/categories.js
@@ -15,7 +15,12 @@ router.post(
   categoriesController.create,
 );
 
-router.patch('/:id', validators.categories.update, categoriesController.update);
+router.patch(
+  '/:id',
+  authController.requireAdminLogin(),
+  validators.categories.update,
+  categoriesController.update,
+);
 
 router.delete(
   '/:id',
