# swagger.json
@@ -17,10 +17,6 @@
       "description": "API for authentication"
     },
     {
-      "name": "Users",
-      "description": "API for users' management"
-    },
-    {
       "name": "Categories",
       "description": "API for categories' management"
     }
@@ -36,9 +32,6 @@
     "application/json"
   ],
   "paths": {
-
-
-
     "/auth/signUp": {
       "post": {
         "tags": [
@@ -72,10 +65,6 @@
         }
       }
     },
-
-
-
-
     "/auth/signIn": {
       "post": {
         "tags": [
@@ -109,12 +98,39 @@
         }
       }
     },
-
-
-
-
-
     "/categories": {
+      "get": {
+        "tags": [
+          "Categories"
+        ],
+        "summary": "Get a list of categories",
+        "parameters": [
+          {
+            "name": "includeInactive",
+            "in": "query",
+            "type": "boolean"
+          },
+          {
+            "name": "name",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "Authorization token header",
+            "type": "string"
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "List of categories"
+          }
+        }
+      },
       "post": {
         "tags": [
           "Categories"
@@ -122,6 +138,13 @@
         "description": "Create a new category for products",
         "summary": "Create category with name, photos, active fields",
         "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "Authorization token header",
+            "type": "string",
+            "required": true
+          },
           {
             "name": "category",
             "in": "body",
@@ -136,10 +159,16 @@
         ],
         "responses": {
           "201": {
-            "description": "Category is created"
+            "description": "Category is created",
+            "schema": {
+              "$ref": "#/definitions/Categories"
+            } 
           },
           "400": {
             "description": "Bad request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "409": {
             "description": "Conflict"
@@ -147,89 +176,112 @@
         }
       }
     },
-
-
-
-
-
-
-
-
-
-
-
-
-
-    "/users/{userId}": {
-      "parameters": [
-        {
-          "name": "userId",
-          "in": "path",
-          "required": true,
-          "description": "ID of user that we want to find",
-          "type": "string"
-        }
-      ],
+    "/categories/{id}": {
       "get": {
         "tags": [
-          "Users"
+          "Categories"
         ],
-        "summary": "Get user with given ID",
+        "summary": "Get category with given ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "ID of category that we want to find",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
-            "description": "User is found",
+            "description": "Category is found",
             "schema": {
-              "$ref": "#/definitions/User"
+              "$ref": "#/definitions/Category"
             }
+          }
+        }
+      },
+      "patch": {
+        "tags": [
+          "Categories"
+        ],
+        "summary": "Update a category with name, photos, active fields",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id of a category to be updated",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "Authorization token header",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "category",
+            "in": "body",
+            "description": "Request body with fields to update category",
+            "schema": {
+              "$ref": "#/definitions/Category"
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Category is updated"
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       },
       "delete": {
-        "summary": "Delete user with given ID",
         "tags": [
-          "Users"
+          "Categories"
         ],
-        "responses": {
-          "200": {
-            "description": "User is deleted",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
-          }
-        }
-      },
-      "put": {
-        "summary": "Update user with give ID",
-        "tags": [
-          "Users"
-        ],
+        "summary": "Delete a category with name, photos, active fields",
         "parameters": [
           {
-            "name": "user",
-            "in": "body",
-            "description": "User with new values of properties",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
+            "name": "id",
+            "in": "path",
+            "description": "Delete a category of products",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "Authorization token header",
+            "type": "string",
+            "required": true
           }
+        ],
+        "produces": [
+          "application/json"
         ],
         "responses": {
           "200": {
-            "description": "User is updated",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
+            "description": "Category is deleted"
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
     }
   },
-
-
-
-
-
-
   "definitions": {
     "User": {
       "required": [
@@ -301,6 +353,10 @@
           "type": "boolean"
         }
       }
+    },
+    "Categories": {
+      "type": "array",
+      "$ref": "#/definitions/Category"
     }
   }
 }
